--- a/package.json
+++ b/package.json
@@ -1,33 +1,45 @@
 {
-    "name": "Gravit",
-    "description" : "Gravit, the versatile Design Tool",
-    "author" : "Quasado",
-    "version": "0.0.3.1",
-    "private": true,
-    "devDependencies": {
-        "grunt": "~0.4.1",
-        "grunt-contrib-copy": "~0.5.0",
-        "grunt-contrib-concat": "~0.3.0",
-        "grunt-contrib-uglify": "~0.2.0",
-        "grunt-contrib-compass": "~0.5.0",
-        "grunt-contrib-jshint": "~0.6.3",
-        "grunt-contrib-cssmin": "~0.6.0",
-        "grunt-contrib-connect": "~0.5.0",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-htmlmin": "~0.1.3",
-        "grunt-bower-install": "~0.5.0",
-        "grunt-contrib-imagemin": "~0.2.0",
-        "grunt-contrib-watch": "~0.5.2",
-        "grunt-rev": "~0.1.0",
-        "grunt-autoprefixer": "~0.2.0",
-        "grunt-usemin": "~0.1.10",
-        "grunt-mocha": "~0.4.0",
-        "grunt-svgmin": "~0.2.0",
-        "grunt-concurrent": "~0.3.0",
-        "grunt-text-replace": "~0.3.12",
-        "grunt-node-webkit-builder": "0.2.0",
-        "load-grunt-tasks": "~0.1.0",
-        "time-grunt": "~0.1.1",
-        "appdmg": "^0.2.0"
-    }
+  "name": "Gravit",
+  "description": "Gravit, the versatile Design Tool",
+  "author": "Quasado",
+  "version": "0.0.3.1",
+  "private": true,
+  "scripts": {
+    "start": "grunt dev",
+    "build": "grunt build",
+    "test": "grunt test",
+    "dist": "grunt dist"
+  },
+  "dependencies": {
+    "nw": "^0.83.0"
+  },
+  "devDependencies": {
+    "grunt": "^1.6.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-concat": "^2.1.0",
+    "grunt-contrib-uglify": "^5.2.2",
+    "grunt-sass": "^3.1.0",
+    "sass": "^1.69.0",
+    "grunt-contrib-jshint": "^3.2.0",
+    "grunt-contrib-cssmin": "^4.0.0",
+    "grunt-contrib-connect": "^3.0.0",
+    "grunt-contrib-clean": "^2.0.1",
+    "grunt-contrib-htmlmin": "^2.4.0",
+    "grunt-bower-install": "^0.5.0",
+    "grunt-contrib-imagemin": "^4.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-rev": "^0.1.0",
+    "grunt-autoprefixer": "^3.0.4",
+    "grunt-usemin": "^3.1.1",
+    "grunt-mocha": "^1.0.0",
+    "grunt-svgmin": "^6.0.0",
+    "grunt-concurrent": "^3.0.0",
+    "grunt-text-replace": "^0.4.0",
+    "load-grunt-tasks": "^5.1.0",
+    "time-grunt": "^2.0.0",
+    "appdmg": "^0.6.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  }
 }
